@@ -71,22 +71,36 @@ class InMemoryTaskManagerTest {
     void testGetDefaultManagerInstances() {
         TaskManager manager = Managers.getDefaultTaskManager();
         assertNotNull(manager, "TaskManager должен быть проинициализирован");
-        assertTrue(manager instanceof InMemoryTaskManager,
-                "TaskManager должен быть экземпляром InMemoryTaskManager");
+        assertInstanceOf(InMemoryTaskManager.class, manager, "TaskManager должен быть экземпляром InMemoryTaskManager");
 
         HistoryManager history = Managers.getDefaultHistoryManager();
         assertNotNull(history, "HistoryManager должен быть проинициализирован");
-        assertTrue(history instanceof InMemoryHistoryManager,
-                "HistoryManager должен быть экземпляром InMemoryHistoryManager");
+        assertInstanceOf(InMemoryHistoryManager.class, history, "HistoryManager должен быть экземпляром InMemoryHistoryManager");
     }
 
     @Test
     void testSaveAndRetrieveTasksById() {
         Task task = new Task("Задача", "Описание");
+        Task task2 = new Task("Задача2", "Описание2");
+        Task task3 = new Task("Задача3", "Описание3");
+
+
         taskManager.saveTask(task);
+        taskManager.saveTask(task2);
+        taskManager.saveTask(task3);
+
+        task.setId(1);
+        task2.setId(2);
+        task3.setId(2);
 
         Task retrievedTask = taskManager.getTaskById(task.getId());
+        Task retrievedTask2 = taskManager.getTaskById(task2.getId());
+        Task retrievedTask3 = taskManager.getTaskById(task3.getId());
         assertEquals(task, retrievedTask, "Задача должна быть доступна по ID");
+        assertEquals(task2, retrievedTask2, "Задача должна быть доступна по ID");
+        assertEquals(task3, retrievedTask3, "Задача должна быть доступна по ID");
+
+        assertEquals(2, historyManager.getHistory().size());
     }
 
     @Test
@@ -125,7 +139,7 @@ class InMemoryTaskManagerTest {
 
         List<Task> history = taskManager.getHistory();
         assertEquals(1, history.size(), "История должна содержать одну задачу");
-        assertEquals("Описание", history.get(0).getDescription(),
+        assertEquals("Описание", history.getFirst().getDescription(),
                 "Оригинальное описание задачи должно сохраниться в истории");
     }
 
@@ -141,19 +155,54 @@ class InMemoryTaskManagerTest {
         List<Task> tasks = taskManager.getAllTasks();
         assertNotNull(tasks, "Задачи не возвращаются");
         assertEquals(1, tasks.size(), "Неверное количество задач");
-        assertEquals(task, tasks.get(0), "Задачи не совпадают");
+        assertEquals(task, tasks.getFirst(), "Задачи не совпадают");
     }
 
     @Test
     void testHistoryAddFunctionality() {
         Task task = new Task("Задача для истории", "Описание");
+        Task task2 = new Task("Задача для истории2", "Описание2");
         taskManager.saveTask(task);
+        taskManager.saveTask(task2);
 
-        historyManager.add(task);
+        taskManager.getTaskById(task.getId());
+        taskManager.getTaskById(task2.getId());
+
         List<Task> history = historyManager.getHistory();
 
         assertNotNull(history, "История должна быть не пустой");
-        assertEquals(1, history.size(), "История должна содержать одну задачу");
-        assertEquals(task, history.get(0), "Задача в истории должна совпадать с добавленной");
+        assertEquals(2, history.size(), "История должна содержать одну задачу");
+        assertEquals(task, history.getFirst(), "Задача в истории должна совпадать с добавленной");
+    }
+
+    @Test
+    void deleteAllTasks() {
+        Task task = new Task("Задача для истории", "Описание");
+        Task task2 = new Task("Задача для истории2", "Описание2");
+        taskManager.saveTask(task);
+        taskManager.saveTask(task2);
+
+        historyManager.add(task);
+        historyManager.add(task2);
+
+        taskManager.deleteAllTasks();
+        List<Task> history = historyManager.getHistory();
+        assertTrue(history.isEmpty());
+        assertTrue(taskManager.getAllTasks().isEmpty());
+    }
+
+    @Test
+    void deleteByIdTaskAndHistory() {
+        Task task = new Task("Задача для истории", "Описание");
+        Task task2 = new Task("Задача для истории2", "Описание2");
+        taskManager.saveTask(task);
+        taskManager.saveTask(task2);
+
+        historyManager.add(task);
+        historyManager.add(task2);
+
+        taskManager.deleteTaskById(task.getId());
+        List<Task> history = historyManager.getHistory();
+        assertEquals(1, history.size());
     }
 }
